# UseFragments

./: .gitignore  GetMediaFormat.java  build.gradle  gradle.properties  local.properties  settings.gradle
app/: CMakeLists.txt  build.gradle
app/buildout/intermediates/bundle_manifest/debug/bundle-manifest/: AndroidManifest.xml  output.json
app/buildout/intermediates/dex/debug/mergeLibDexDebug/: classes_1.dex
app/buildout/intermediates/dex/debug/mergeProjectDexDebug/: classes.dex
app/buildout/intermediates/dex_archive_input_jar_hashes/debug/: out
app/buildout/intermediates/incremental/debug-mergeJavaRes/: merge-state
app/buildout/intermediates/incremental/debug-mergeJavaRes/zip-cache/: _dnCasCIUWFmw3Us3scfZcEyW2g=  kJqgSa6zsqwdQskIyS8XQu9Myw4=
app/buildout/intermediates/incremental/debug-mergeNativeLibs/: merge-state
app/buildout/intermediates/incremental/debug-mergeNativeLibs/zip-cache/: bjGAy1RVMa1Nbb6A_At50rvI7i0=
app/buildout/intermediates/incremental/mergeDebugAssets/: merger.xml
app/buildout/intermediates/incremental/mergeDebugJniLibFolders/: merger.xml
app/buildout/intermediates/incremental/mergeDebugResources/: compile-file-map.properties  merger.xml
app/buildout/intermediates/incremental/mergeDebugShaders/: merger.xml
app/buildout/intermediates/instant_app_manifest/debug/: AndroidManifest.xml  output.json
app/buildout/intermediates/manifest_merge_blame_file/debug/: manifest-merger-blame-debug-report.txt
app/buildout/intermediates/merged_manifests/debug/: output.json
app/buildout/intermediates/metadata_feature_manifest/debug/metadata-feature/: output.json
app/buildout/intermediates/res/merged/debug/: anim_push_left_in.xml.flat  anim_push_left_out.xml.flat  anim_push_right_in.xml.flat  anim_push_right_out.xml.flat  anim_slide_in_bottom.xml.flat  anim_slide_left_in.xml.flat  anim_slide_left_out.xml.flat  anim_slide_out_bottom.xml.flat  anim_slide_right_in.xml.flat  anim_slide_right_out.xml.flat  animator_card_flip_left_in.xml.flat  animator_card_flip_left_out.xml.flat  animator_card_flip_right_in.xml.flat  animator_card_flip_right_out.xml.flat  animator_enter.xml.flat  animator_enter_left_in.xml.flat  animator_enter_right_in.xml.flat  animator_exit.xml.flat  animator_exit_left_out.xml.flat  animator_exit_right_out.xml.flat  animator_push_left_in.xml.flat  animator_push_right_in.xml.flat  drawable-v24_ic_launcher_foreground.xml.flat  drawable_a1.jpeg.flat  drawable_a2.jpeg.flat  drawable_a3.jpeg.flat  drawable_a4.jpg.flat  drawable_a5.jpeg.flat  drawable_a6.jpeg.flat  (+300 more)
app/buildout/intermediates/runtime_symbol_list/debug/: R.txt
app/buildout/intermediates/symbol_list_with_package_name/debug/: package-aware-r.txt
app/buildout/outputs/apk/debug/: output.json
app/buildout/outputs/logs/: manifest-merger-debug-report.txt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniUtils.c  native-lib.cpp
app/src/main/cpp/backup/: SimpleAudioPlayer.cpp  SimpleVideoPlayer.cpp  SimpleVideoPlayer.h  SimpleVideoPlayer2.cpp  SimpleVideoPlayer2.h
app/src/main/cpp/ffmpeg/: AACH264Player.cpp  AACH264Player.h  AudioRecord.cpp  AudioRecord.h  AudioTrack.cpp  AudioTrack.h  AudioVideoPlayer.cpp  AudioVideoPlayer.h  CMakeLists.txt  MediaPlayer.cpp  MediaPlayer.h  MediaPlayerFor4K.cpp  MediaPlayerFor4K.h  MediaPlayerForMediaCodec.cpp  MediaPlayerForMediaCodec.h  MyHeader.h  OnlyAudioPlayer.cpp  OnlyAudioPlayer.h  OnlyVideoPlayer.cpp  OnlyVideoPlayer.h  SimpleAudioPlayer.cpp  SimpleAudioPlayer.h  SimpleVideoPlayer.cpp  SimpleVideoPlayer.h  SimpleVideoPlayer2.cpp  SimpleVideoPlayer2.h  SimpleVideoPlayer3.cpp  SimpleVideoPlayer3.h  Wrapper.h  ffmpeg.cpp  ffmpeg.h
app/src/main/cpp/include/: Log.h  MediaWrapper.h
app/src/main/cpp/module1/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/module2/: CMakeLists.txt  JniUtils.c
app/src/main/cpp/socket/: SocketClient.cpp  SocketClient.h  SocketServer.cpp  SocketServer.h
app/src/main/res/anim/: push_left_in.xml  push_left_out.xml  push_right_in.xml  push_right_out.xml  slide_left_in.xml  slide_left_out.xml  slide_right_in.xml  slide_right_out.xml
app/src/main/res/animator/: card_flip_left_in.xml  card_flip_left_out.xml  card_flip_right_in.xml  card_flip_right_out.xml  enter.xml  enter_left_in.xml  enter_right_in.xml  exit_left_out.xml  exit_right_out.xml
app/src/main/res/drawable/: audio_progressbar_bg.xml  ic_launcher_background.xml  item_selector.xml  media_ic_next.xml  media_ic_pause.xml  media_ic_play.xml  media_ic_prev.xml  playback_progress_bar.xml  progressbar_bg.xml  video_progressbar_bg.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  activity_main1.xml  activity_main2.xml  activity_main3.xml  activity_player.xml  activity_player_jni.xml  activity_title_view.xml  camera_layout.xml  content_layout.xml  controller_panel.xml  device_title_layout.xml  fragment_audio.xml  fragment_camera2_basic.xml  fragment_camera2_basic_preview.xml  fragment_contents.xml  fragment_decode_audio.xml  fragment_decode_play.xml  fragment_folder.xml  fragment_horizontal_card.xml  fragment_main.xml  fragment_main1.xml  fragment_main2.xml  fragment_main3.xml  fragment_main4.xml  fragment_medical_record.xml  fragment_medical_record_dialog.xml  fragment_one_layout.xml  fragment_record_screen.xml  fragment_test_dialog_recycleview.xml  fragment_test_edittext.xml  fragment_test_motionevent.xml  fragment_test_view.xml  fragment_test_viewpager.xml  fragment_throwing_screen.xml  fragment_video_live_broadcasting.xml  item_horizontal_card.xml  item_medical_record.xml  item_medical_record_input.xml  layout_icon_node.xml  layout_popup_view.xml  (+1 more)
app/src/main/res/layout-land/: activity_main.xml  activity_player.xml  controller_panel.xml  fragment_audio.xml  fragment_decode_play.xml  fragment_main.xml  fragment_one_layout.xml  fragment_record_screen.xml  fragment_throwing_screen.xml  fragment_video_live_broadcasting.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml  styles_image_button.xml
app/src/main/res/xml/: accessibility_config.xml  device_filter.xml
(+382 files in other folders)
